--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,12 @@
 [submodule "powershell/modules/TabExpansionPlusPlus"]
 	path = powershell/modules/TabExpansionPlusPlus
 	url = https://github.com/lzybkr/TabExpansionPlusPlus.git
+[submodule "Sublime Text 3/Packages/Eido"]
+	path = Sublime Text 3/Packages/Eido
+	url = https://github.com/be5invis/sublimetext-eido.git
+[submodule "Sublime Text 3/Packages/Moescript"]
+	path = Sublime Text 3/Packages/Moescript
+	url = https://github.com/be5invis/sublimetext-moescript.git
+[submodule "Sublime Text 3/Packages/BracketHighlighter"]
+	path = Sublime Text 3/Packages/BracketHighlighter
+	url = https://github.com/facelessuser/BracketHighlighter.git
